# gtk-magnum-bootstrap

./: ApplicationWindow.cpp  ApplicationWindow.h  CMakeLists.txt  GtkMagnum.cpp  GtkMagnum.h  README.md  main.cpp
